# DiscordBot

./: .gitignore  README.md  appveyor.yml  config.eg.json  meson.build  package-lock.json  package.json
designs/: discordbot_diagram.uxf
docs/: Doxyfile.in  conf.py  index.rst  meson.build
include/: bot.hpp  botinterface.hpp  command.hpp  commandexception.hpp  commandhandler.hpp  include.hpp  module.hpp
include/commands/: addadmin.hpp  addmod.hpp  contact.hpp  help.hpp  load.hpp  reload.hpp  removeadmin.hpp  removemod.hpp  traceback.hpp  unload.hpp  uptime.hpp
include/discordpp/: MessageEmbed.hh  bot.hh  plugin-constructs.hh  plugin-overload.hh  plugin-ratelimit.hh  plugin-responder.hh  rest-beast.hh  util.hh  websocket-simpleweb.hh
include/discordpp/CONSTRUCTIN/: FROMJSON.hh
include/discordpp/categories/: application-commands.hh  audit-log.hh  channel.hh  emoji.hh  guild-template.hh  guild.hh  invite.hh  receiving-and-responding.hh  stage-instance.hh  sticker.hh  user.hh  voice.hh  webhook.hh
include/discordpp/constructs/: channel.hh  message.hh  sticker.hh  todo.hh
include/modules/: core.hpp  default.hpp
src/: Config.ts  bot.cpp  bot.ts  commandContext.ts  commandHandler.ts  commandhandler.cpp  extern.cpp  main.cpp  meson.build  modChat.ts  reactor.ts  userWarns.json
src/client/: botClient.ts
src/commands/: addadmin.cpp  ban.ts  command.ts  greet.ts  help.cpp  help.ts  index.ts  join.ts  kick.ts  load.cpp  mute.ts  ping.ts  reload.cpp  removeadmin.cpp  sound.ts  traceback.cpp  unload.cpp  unmute.ts  uptime.cpp  warn.ts
src/commands/ban/: ban.ts
src/commands/greet/: greet.ts
src/commands/help/: help.ts
src/commands/ping/: ping.ts
src/commands/sounds/: sound.ts
src/core/: Config.ts  bot.ts
src/modules/: command.ts  core.cpp  default.cpp  modules.ts
src/modules/Admin/: index.ts
src/modules/Admin/ban/: ban.ts
src/modules/Admin/kick/: kick.ts
src/modules/Admin/mute/: mute.ts
src/modules/Admin/warn/: warn.ts
src/modules/kick/: kick.ts
src/modules/mute/: mute.ts
src/modules/sounds/: index.ts  sound.ts
src/modules/sounds/join/: join.ts
src/modules/sounds/leave/: leave.ts
src/modules/sounds/pause/: pause.ts
src/modules/sounds/play/: play.ts
src/modules/sounds/unpause/: unpause.ts
src/modules/warn/: warn.ts
tests/: main_test.cpp  meson.build  sample4.cc  sample4.h  test_entry.cpp
