executable('discordbot',
        ['main.cpp', 'extern.cpp',
         'bot.cpp',
         'commandhandler.cpp',
         'modules/core.cpp',
         'commands/help.cpp',
         'commands/uptime.cpp',
         'commands/traceback.cpp',
         'commands/load.cpp',
         'commands/unload.cpp',
         'commands/addadmin.cpp'
        ]
    )